# Ration_Django_Web_App

./: Dockerfile  fly.toml  manage.py  pyproject.toml  readme.md
Ration_Django_Web_App/: asgi.py  settings.py  urls.py  views.py  wsgi.py
Ration_Django_Web_App/templates/: base.html  home.html
ration/: admin.py  forms.py  models.py  urls.py  views.py
ration/migrations/: 0001_initial.py  0002_alter_recipe_image.py  0002_recipe_summary.py  0002_review_date_added.py  0003_alter_profile_image.py  0003_rename_amount_teaspoons_amount_amount_tablespoons.py  0004_merge_20230106_2014.py  0005_auto_20230106_2040.py  0006_alter_profile_favorites.py  0007_alter_review_recipe.py  0008_alter_ingredient_options_ingredient_date_added_and_more.py  0009_photo.py  0010_alter_recipe_image.py  0010_auto_20230110_1717.py  0011_auto_20230110_2003.py  0012_auto_20230111_0019.py  0013_auto_20230111_1739.py
ration/static/css/: style.css
ration/templates/: about.html  base.html  home.html
ration/templates/meals/: create.html  search.html
ration/templates/profile/: calendar.html  meal_log.html
ration/templates/ration/: recipe_form.html  review_confirm_delete.html
ration/templates/recipes/: confirm_delete.html  create.html  detail.html  index.html  search.html
ration/templates/registration/: login.html  password.html  signup.html  update.html  user_profile.html
ration/templates/reviews/: review_confirm_delete.html  update.html
ration/templatetags/: ration_extras.py
