[tool.poetry]
name = "ration-django-web-app"
version = "0.1.0"
description = ""
authors = ["mmorganj41 <mmorganj41@gmail.com>"]
readme = "README.md"
packages = [{include = "ration_django_web_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2"
dj-database-url = "^1.2.0"
daphne = "^4.0.0"
psycopg2-binary = "^2.9.5"
boto3 = "^1.26.48"
django-environ = "^0.9.0"
environ = "^1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
